[package]
name = "form-data"
version = "0.5.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "AsyncRead/AsyncWrite/Stream `multipart/form-data`"
homepage = "https://github.com/viz-rs/form-data"
keywords = ["async", "form-data", "multipart", "http", "hyper"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "src/*.rs",
]

[features]
default = ["async"]

async = ["futures-util"]
sync = []

[dependencies]
bytes = "1.5"
http = "1.0"
httparse = "1.8"
mime = "0.3"
memchr = "2.6"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = [
  "io",
], optional = true }

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
async-fs = "2.0"
tempfile = "3.8"
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1.0"
http-body-util = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"
tiny_http = "0.12"

[[example]]
name = "hyper"
path = "examples/hyper.rs"

#[[example]]
#name = "warp"
#path = "examples/warp.rs"

[[example]]
name = "tiny_http"
path = "examples/tiny_http.rs"
required-features = ["sync"]
