[package]
name = "form-data"
version = "0.6.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "AsyncRead/AsyncWrite/Stream `multipart/form-data`"
repository = "https://github.com/viz-rs/form-data"
keywords = ["async", "form-data", "multipart", "http", "hyper"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "src/*.rs",
]

[features]
default = ["async"]

async = ["futures-util/io"]
sync = []

[dependencies]
bytes = "1.11"
http = "1.4"
httparse = "1.10"
mime = "0.3"
memchr = "2.7"
tracing = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.futures-util]
version = "0.3"
default-features = false
optional = true

[dev-dependencies]
anyhow = "1.0"
async-fs = "2.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rand = "0.9"
tempfile = "3.0"
tiny_http = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# warp = "0.3"

[[example]]
name = "hyper"
path = "examples/hyper.rs"

#[[example]]
#name = "warp"
#path = "examples/warp.rs"

[[example]]
name = "tiny_http"
path = "examples/tiny_http.rs"
required-features = ["sync"]

[[test]]
name = "form-data"
path = "tests/form-data.rs"
required-features = ["async"]

[[test]]
name = "hyper-body"
path = "tests/hyper-body.rs"
required-features = ["async"]

[[test]]
name = "tiny-body"
path = "tests/tiny-body.rs"
required-features = ["sync"]
